# RSP

./: .replit  DATABASE_SETUP.md  README.md  capture_screenshots.py  gallery.md  package-lock.json  package.json  pyproject.toml  replit.md
apps/frontend/: .env.local  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/frontend/.next/: app-build-manifest.json  react-loadable-manifest.json  trace
apps/frontend/.next/cache/: config.json
apps/frontend/.next/dev/: build-manifest.json  prerender-manifest.json  trace
apps/frontend/.next/server/: app-paths-manifest.json  middleware-react-loadable-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
apps/frontend/app/: layout.tsx  page.tsx  providers.tsx
apps/frontend/app/about/: page.tsx
apps/frontend/app/caldyn/: page.tsx
apps/frontend/components/: InsightsPanel.tsx  LocationSelector.tsx  LocationSelectorMap.tsx  Navigation.tsx  ParameterForm.tsx  ProtectedRoute.tsx  YieldSummary.tsx
apps/frontend/lib/: api.ts  auth-context.tsx
apps/frontend/styles/: globals.css
apps/frontend/types/: index.ts
data/processed/: synthetic_remote_sensing_cubes.npy  synthetic_remote_sensing_metadata.parquet
docs/: architecture.md  getting-started.md
services/: __init__.py
services/api/: alembic.ini  requirements.txt
services/api/alembic/: env.py
services/api/app/: main.py
services/model_inference/: __init__.py
services/model_inference/app/: __init__.py  heuristic_model.py
(+368 files in other folders)
